--- a/src/main/resources/templates/auth/registration/client.html
+++ b/src/main/resources/templates/auth/registration/client.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/auth/registration}" th:object="${client}">
+<form th:method="POST" th:action="@{/auth/registration/client}" th:object="${client}">
     <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
     <label for="firstName">Введите имя: </label>
     <input type="text" th:field="*{firstName}" id="firstName"/>
