Finish CRUD for repairmen, add links for registration

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -27,5 +27,11 @@
     <input type="submit" value="Войти"/>
 </form>
 
+<hr>
+<br>
+<a th:href="@{/auth/registration-client}">Зарегистрироваться как клиент</a>
+<br>
+<a th:href="@{/auth/registration-repairman}">Зарегистрироваться как мастер</a>
+
 </body>
 </html>
