--- a/src/main/resources/templates/repairmen/edit.html
+++ b/src/main/resources/templates/repairmen/edit.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/clients/{id}(id=${client.getId()})}" th:object="${client}">
+<form th:method="PATCH" th:action="@{/repairmen/{id}(id=${repairman.getId()})}" th:object="${repairman}">
     <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
     <label for="firstName">Введите имя: </label>
     <input type="text" th:field="*{firstName}" id="firstName"/>
@@ -32,9 +32,14 @@
     <input type="text" th:field="*{telNumber}" id="telNumber"/>
     <br/>
 
-    <div class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
-    <label for="address">Введите адрес: </label>
-    <input type="text" th:field="*{address}" id="address"/>
+    <div class="error" th:if="${#fields.hasErrors('experience')}" th:errors="*{experience}"></div>
+    <label for="experience">Введите опыт работы: </label>
+    <input type="number" th:field="*{experience}" id="experience"/>
+    <br/>
+
+    <div class="error" th:if="${#fields.hasErrors('qualification')}" th:errors="*{qualification}"></div>
+    <label for="qualification">Введите квалификацию: </label>
+    <input type="text" th:field="*{qualification}" id="qualification"/>
     <br/>
 
     <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
@@ -52,11 +57,11 @@
 
 <br>
 <hr>
-<a href="/clients">Список клиентов</a>
+<a href="/repairmen">Список клиентов</a>
 
 <br>
 <hr>
-<a th:href="@{/clients/{id}(id=${client.getId()})}">Вернуться в профиль</a>
+<a th:href="@{/repairmen/{id}(id=${repairman.getId()})}">Вернуться в профиль</a>
 
 </body>
 </html>
