--- a/src/main/resources/templates/auth/registration-repairman.html
+++ b/src/main/resources/templates/auth/registration-repairman.html
@@ -52,6 +52,14 @@
     <input type="password" th:field="*{password}" id="password"/>
     <br/>
 
+    <p>Рабочий график:</p>
+    <div th:each="day : ${days}">
+        <input type="checkbox" th:name="selectedDays" th:id="'day_' + ${day.id}" th:value="${day.id}">
+        <label th:for="'day_' + ${day.id}" th:text="${day.fullName}"></label>
+        <br>
+    </div>
+    <br>
+
     <input type="submit" value="Зарегистрироваться"/>
 </form>
 
