--- a/src/main/resources/templates/repairmen/id.html
+++ b/src/main/resources/templates/repairmen/id.html
@@ -14,6 +14,8 @@
 <p th:text="${repairman.getExperience()}"></p>
 <p th:text="${repairman.getQualification()}"></p>
 <p th:text="${repairman.getRating()}"></p>
+<p>Рабочий график</p>
+<p th:each="day : ${repairman.getDays()}" th:text="${day.fullName}"></p>
 
 
 <form th:method="GET" th:action="@{/repairmen/{id}/edit(id=${repairman.getId()})}">
