Add appliances (unfinished)

--- a/src/main/resources/templates/clients/index.html
+++ b/src/main/resources/templates/clients/index.html
@@ -8,8 +8,8 @@
 
 <p>Список клиентов</p>
 <div th:each="client : ${clients}">
-    <a th:href="@{/clients/{id}(id=${client.getId()})}"
-       th:text="${client.getFirstName() + ' ' + client.getLastName()}"></a>
+    <a th:href="@{/clients/{id}(id=${client.id})}"
+       th:text="${client.firstName + ' ' + client.lastName}"></a>
 </div>
 
 <br>
