--- a/src/main/resources/templates/clients/index.html
+++ b/src/main/resources/templates/clients/index.html
@@ -2,21 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Список клиентов</title>
+    <title>Клиенты</title>
 </head>
 <body>
 
-<p>Список клиентов</p>
 <div th:each="client : ${clients}">
-    <a th:href="@{/clients/{id}(id=${client.id})}"
+    <a th:href="@{'/clients/' + ${client.id}}"
        th:text="${client.firstName + ' ' + client.lastName}"></a>
 </div>
-
-<br>
-<hr>
-<form th:method="POST" th:action="@{/logout}">
-    <input type="submit" value="Выйти из аккаунта" />
-</form>
 
 </body>
 </html>
