--- a/src/main/resources/templates/appliance-types/index.html
+++ b/src/main/resources/templates/appliance-types/index.html
@@ -2,13 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Типы приборов</title>
+    <title>Типы техники</title>
 </head>
 <body>
 
 <div th:each="type : ${applianceTypes}">
-    <p th:text="${type.name}"></p>
+    <span th:text="${type.name}"></span>
 </div>
+
+<br>
+<a th:href="@{/appliance-types/new}">Добавить тип техники</a>
 
 </body>
 </html>
