--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -11,23 +11,22 @@
 </head>
 <body>
 
-<form name="f" method="post" action="/process_login">
+<form method="post" action="/process_login">
     <div class="error" th:if="${param.error}">
-        <p>Некорректные имя пользователя и/или пароль</p>
+        <span>Некорректные имя пользователя и/или пароль</span>
     </div>
 
-    <label for="username">Введите имя пользователя: </label>
-    <input type="text" name="username" id="username"/>
-    <br/>
+    <label for="username">Имя пользователя: </label>
+    <input type="text" name="username" id="username">
+    <br>
 
-    <label for="password">Введите пароль: </label>
-    <input type="password" name="password" id="password"/>
-    <br/>
+    <label for="password">Пароль: </label>
+    <input type="password" name="password" id="password">
+    <br>
 
-    <input type="submit" value="Войти"/>
+    <input type="submit" value="Войти">
 </form>
 
-<hr>
 <br>
 <a th:href="@{/auth/registration-client}">Зарегистрироваться как клиент</a>
 <br>
