--- a/src/main/resources/templates/auth/registration-client.html
+++ b/src/main/resources/templates/auth/registration-client.html
@@ -13,41 +13,41 @@
 
 <form th:method="POST" th:action="@{/auth/registration-client}" th:object="${client}">
     <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
-    <label for="firstName">Введите имя: </label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
-    <br/>
+    <label for="firstName">Имя: </label>
+    <input type="text" id="firstName" th:field="*{firstName}">
+    <br>
 
     <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
-    <label for="lastName">Введите фамилию: </label>
-    <input type="text" th:field="*{lastName}" id="lastName"/>
-    <br/>
+    <label for="lastName">Фамилия: </label>
+    <input type="text" id="lastName" th:field="*{lastName}">
+    <br>
 
     <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-    <label for="email">Введите адрес эл. почты: </label>
-    <input type="text" th:field="*{email}" id="email"/>
-    <br/>
+    <label for="email">Адрес эл. почты: </label>
+    <input type="email" id="email" th:field="*{email}">
+    <br>
 
     <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
-    <label for="telNumber">Введите номер телефона: </label>
-    <input type="text" th:field="*{telNumber}" id="telNumber"/>
-    <br/>
+    <label for="telNumber">Номер телефона: </label>
+    <input type="text" id="telNumber" th:field="*{telNumber}">
+    <br>
 
     <div class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
-    <label for="address">Введите адрес: </label>
-    <input type="text" th:field="*{address}" id="address"/>
-    <br/>
+    <label for="address">Адрес: </label>
+    <input type="text" id="address" th:field="*{address}">
+    <br>
 
     <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-    <label for="username">Введите имя пользователя: </label>
-    <input type="text" th:field="*{username}" id="username"/>
-    <br/>
+    <label for="username">Имя пользователя: </label>
+    <input type="text" id="username" th:field="*{username}">
+    <br>
 
     <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-    <label for="password">Введите пароль: </label>
-    <input type="password" th:field="*{password}" id="password"/>
-    <br/>
+    <label for="password">Пароль: </label>
+    <input type="password" id="password" th:field="*{password}">
+    <br>
 
-    <input type="submit" value="Зарегистрироваться"/>
+    <input type="submit" value="Зарегистрироваться">
 </form>
 
 </body>
