--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,10 @@
 <body>
 
 <p>Welcome</p>
+<br>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="Выйти из аккаунта">
+</form>
 
 </body>
 </html>
