--- a/src/main/resources/templates/repairmen/edit.html
+++ b/src/main/resources/templates/repairmen/edit.html
@@ -11,67 +11,52 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/repairmen/{id}(id=${repairman.getId()})}" th:object="${repairman}">
+<form th:method="PATCH" th:action="@{'/repairmen/' + ${repairman.id}}" th:object="${repairman}">
     <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
-    <label for="firstName">Введите имя: </label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
-    <label for="lastName">Введите фамилию: </label>
-    <input type="text" th:field="*{lastName}" id="lastName"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-    <label for="email">Введите адрес эл. почты: </label>
-    <input type="text" th:field="*{email}" id="email"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
-    <label for="telNumber">Введите номер телефона: </label>
-    <input type="text" th:field="*{telNumber}" id="telNumber"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('experience')}" th:errors="*{experience}"></div>
-    <label for="experience">Введите опыт работы: </label>
-    <input type="number" th:field="*{experience}" id="experience"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('qualification')}" th:errors="*{qualification}"></div>
-    <label for="qualification">Введите квалификацию: </label>
-    <input type="text" th:field="*{qualification}" id="qualification"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-    <label for="username">Введите имя пользователя: </label>
-    <input type="text" th:field="*{username}" id="username"/>
-    <br/>
-
-    <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-    <label for="password">Введите пароль: </label>
-    <input type="password" th:field="*{password}" id="password"/>
-    <br/>
-
-    <p>Рабочий график:</p>
-    <div class="error" th:if="${#fields.hasErrors('days')}" th:errors="*{days}"></div>
-    <div th:each="day : ${days}">
-        <input type="checkbox" th:name="selectedDays" th:id="'day_' + ${day.id}" th:value="${day.id}"
-               th:checked="${scheduleIds.contains(day.id)}">
-        <label th:for="'day_' + ${day.id}" th:text="${day.fullName}"></label>
-        <br>
-    </div>
+    <label for="firstName">Имя: </label>
+    <input type="text" id="firstName" th:field="*{firstName}">
     <br>
 
-    <input type="submit" value="Обновить"/>
+    <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
+    <label for="lastName">Фамилия: </label>
+    <input type="text" id="lastName" th:field="*{lastName}">
+    <br>
+
+    <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+    <label for="email">Адрес эл. почты: </label>
+    <input type="email" id="email" th:field="*{email}">
+    <br>
+
+    <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
+    <label for="telNumber">Номер телефона: </label>
+    <input type="text" id="telNumber" th:field="*{telNumber}">
+    <br>
+
+    <div class="error" th:if="${#fields.hasErrors('experience')}" th:errors="*{experience}"></div>
+    <label for="experience">Опыт работы: </label>
+    <input type="number" id="experience" th:field="*{experience}">
+    <br>
+
+    <div class="error" th:if="${#fields.hasErrors('qualification')}" th:errors="*{qualification}"></div>
+    <label for="qualification">Квалификация: </label>
+    <input type="text" id="qualification" th:field="*{qualification}">
+    <br>
+
+    <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+    <label for="username">Имя пользователя: </label>
+    <input type="text" id="username" th:field="*{username}">
+    <br>
+
+    <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+    <label for="password">Пароль: </label>
+    <input type="password" id="password" th:field="*{password}">
+    <br>
+
+    <input type="submit" value="Обновить">
 </form>
 
 <br>
-<hr>
-<a href="/repairmen">Список клиентов</a>
-
-<br>
-<hr>
-<a th:href="@{/repairmen/{id}(id=${repairman.getId()})}">Вернуться в профиль</a>
+<a th:href="@{'/repairmen/' + ${repairman.id}}">Вернуться в профиль</a>
 
 </body>
 </html>
