--- a/src/main/resources/templates/appliances/index.html
+++ b/src/main/resources/templates/appliances/index.html
@@ -7,13 +7,13 @@
 <body>
 
 <div th:each="appliance : ${appliances}">
-    <a th:href="@{'/clients/' + ${clientId} + '/appliances/' + ${appliance.id}}" th:text="${appliance.name}"></a>
+    <a th:href="@{'/appliances/' + ${appliance.id}}" th:text="${appliance.name}"></a>
 </div>
 
 <br>
-<a th:href="@{'/clients/' + ${clientId} + '/appliances/new'}">Добавить технику</a>
+<a th:href="@{/appliances/new}">Добавить технику</a>
 <br>
-<a th:href="@{'/clients/' + ${clientId}}">Вернуться в профиль</a>
+<a th:href="@{'/clients/' + ${client.id}}">Вернуться в профиль</a>
 
 </body>
 </html>
