--- a/src/main/resources/templates/clients/id.html
+++ b/src/main/resources/templates/clients/id.html
@@ -15,7 +15,7 @@
     <p th:text="${client.address}"></p>
 </div>
 
-<form th:method="GET" th:action="@{'/clients/' + ${client.id} + '/appliances'}">
+<form th:method="GET" th:action="@{/appliances}">
     <input type="submit" value="Ваша техника">
 </form>
 <br>
