--- a/src/main/resources/templates/schedule/index.html
+++ b/src/main/resources/templates/schedule/index.html
@@ -11,7 +11,7 @@
 </div>
 
 <br>
-<form th:method="GET" th:action="@{'/repairmen/' + ${repairmanId} + '/schedule/edit'}">
+<form th:method="GET" th:action="@{/schedule/edit}">
     <input type="submit" value="Обновить">
 </form>
 
