--- a/src/main/resources/templates/schedule/index.html
+++ b/src/main/resources/templates/schedule/index.html
@@ -16,7 +16,7 @@
 </form>
 
 <br>
-<a th:href="@{'/repairmen/' + ${repairmanId}}">Вернуться в профиль</a>
+<a th:href="@{/repairmen/profile}">Вернуться в профиль</a>
 
 </body>
 </html>
