--- a/src/main/resources/templates/repairmen/edit.html
+++ b/src/main/resources/templates/repairmen/edit.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{'/repairmen/' + ${repairman.id}}" th:object="${repairman}">
+<form th:method="PATCH" th:action="@{/repairmen/profile}" th:object="${repairman}">
     <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
     <label for="firstName">Имя: </label>
     <input type="text" id="firstName" th:field="*{firstName}">
@@ -56,7 +56,7 @@
 </form>
 
 <br>
-<a th:href="@{'/repairmen/' + ${repairman.id}}">Вернуться в профиль</a>
+<a th:href="@{/repairmen/profile}">Вернуться в профиль</a>
 
 </body>
 </html>
