--- a/src/main/resources/templates/clients/main.html
+++ b/src/main/resources/templates/clients/main.html
@@ -10,6 +10,10 @@
     <input type="submit" value="Профиль">
 </form>
 <br>
+<form th:method="GET" th:action="@{/subscriptions}">
+    <input type="submit" value="Подписки">
+</form>
+<br>
 <form th:method="GET" th:action="@{/appliances}">
     <input type="submit" value="Ваша техника">
 </form>
