--- a/src/main/resources/templates/orders/index.html
+++ b/src/main/resources/templates/orders/index.html
@@ -15,7 +15,7 @@
         <p th:text="'Стоимость: ' + ${order.cost}"></p>
         <p th:text="'Дата ремонта: ' + ${order.date}"></p>
         <p th:if="${order.repairman}" th:text="'Мастер: ' + ${order.repairman.firstName} + ' ' + ${order.repairman.lastName}"></p>
-        <!--    <p th:text="'Оплата: ' + ${order.paymentType.name}"></p>-->
+        <p th:text="'Оплата: ' + ${order.paymentType.name}"></p>
         <hr>
     </div>
 </div>
